<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Community Soccer</string>
    <string name="title_activity_main">Community Soccer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_match">New match</string>
    <string name="view_statistics">View statistics</string>
    <string name="manage_people">Manage people</string>
    <string name="edit_community">Edit community</string>
    <string name="community_default_name">Default Community</string>
    <string name="title_activity_new_match">New match</string>
    <string name="add_player">Add player</string>
    <string name="home_players">Home players</string>
    <string name="add_home_player">Add home player</string>
    <string name="add">+</string>
    <string name="no_home_players">No home players</string>
    <string name="visitor_players">Visitors players</string>
    <string name="add_visitor_player">Add visitor player</string>
    <string name="no_visitors_players">No visitors players</string>
    <string name="change_date_time">Change date and time</string>
    <string name="chage_match_date">Change match date</string>
    <string name="title_activity_select_players">Select players</string>
    <string name="add_selected">Add Selected</string>
    <string name="cancel">Cancel</string>
    <string name="temp_text">Temporal text</string>
    <string name="goals">Goals</string>
    <string name="yellow_cards">Yellow cards</string>
    <string name="red_cards">Red cards</string>
    <string name="player_name">Player name</string>
    <string name="set_selected">Set selected</string>
    <string name="set_home_players">Set home players</string>
    <string name="set_visitor_players">Set visitor_players</string>
    <string name="save_match">Save match</string>
    <string name="match_saved">Match saved</string>
    <string name="title_activity_statistics_main">Statistics</string>
    <string name="by_players">By players</string>
    <string name="rankings">Rankings</string>
    <string name="awards">Awards</string>
    <string name="title_activity_statistics_by_player">Statistics by player</string>
    <string name="title_section1">Here</string>
    <string name="title_section2">Will be</string>
    <string name="title_section3">Something</string>
    <string name="title_activity_rankings">Rankings</string>
    <string name="by_score">By score</string>
    <string name="by_goals">By goals</string>
    <string name="by_red_cards">By red cards</string>
    <string name="by_yellow_cards">By yellow cards</string>
    <string name="title_activity_ranking_by_score">Ranking by score</string>
    <string name="title_activity_ranking_by_goals">Ranking by goals</string>
    <string name="title_activity_ranking_by_yellow_cards">Ranking by yellow cards</string>
    <string name="title_activity_ranking_by_red_cards">Ranking by red cards</string>

</resources>
