<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llVerticalList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.phoneixs.communitysoccer.NewMatch$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chage_match_date" />

        <Button
            android:id="@+id/btnChangeDateTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_date_time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/home_players"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddHomePlayer"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_home_player" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoHomePlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_home_players" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />
    
    <LinearLayout
        android:id="@+id/llVisitors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvVisitor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/visitor_players"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddVisitorPlayer"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_visitor_player" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNoVisitorPlayers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_visitors_players" />

</LinearLayout>
