<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.phoneixs.communitysoccer.RankingsActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/btnByScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_score" />

    <Button
        android:id="@+id/btnByGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_goals" />

    <Button
        android:id="@+id/btnByRedCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_red_cards" />

    <Button
        android:id="@+id/btnByYellowCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_yellow_cards" />

</LinearLayout>
