<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.phoneixs.communitysoccer.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/tvNombreComunidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/community_default_name" />
    
    <Button
        android:id="@+id/btnNewMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvNombreComunidad"
        android:layout_marginTop="28dp"
        android:text="@string/new_match" />

    <Button
        android:id="@+id/btnViewStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnNewMatch"
        android:layout_alignRight="@+id/btnNewMatch"
        android:layout_below="@+id/btnNewMatch"
        android:text="@string/view_statistics" />

    <Button
        android:id="@+id/btnManagePeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnViewStatistics"
        android:layout_alignRight="@+id/btnViewStatistics"
        android:layout_below="@+id/btnViewStatistics"
        android:text="@string/manage_people" />

    <Button
        android:id="@+id/btnEditCommunity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnManagePeople"
        android:layout_alignRight="@+id/btnManagePeople"
        android:layout_below="@+id/btnManagePeople"
        android:text="@string/edit_community" />

</RelativeLayout>
